...
                    scrolledContainerColor = Color.DarkGray,
                    navigationIconContentColor = Color.White,
                    titleContentColor = Color.White,
                    actionIconContentColor = Color.White
                ),
                title = {
                    Text(text = "Image Picker")
                }
            )
        },
        content = { paddingValues ->
            Column(
                modifier = Modifier
...
                horizontalAlignment = Alignment.CenterHorizontally
            ) {

                Button(modifier = Modifier
                    .padding(top = 100.dp)
                    .semantics {
                        contentDescription = "btnPickImage"
                    }, onClick = {
                    val intent = Intent(Intent.ACTION_CHOOSER).apply {
                        putExtra(
                            Intent.EXTRA_INTENT,
                            Intent(Intent.ACTION_GET_CONTENT).apply { type = "image/*" })
                        putExtra(Intent.EXTRA_TITLE, "Select Image")
...
